# PlayGround

BA_Plane/: CMakeLists.txt  main.cpp
BA_Plane/g2o/g2o/types/: types_seven_dof_expmap.h
G2OPlayground3/: CMakeLists.txt  Converter.cc  Converter.h  main.cpp
G2OPoseGraph/: CMakeLists.txt  pose_graph_g2o_SE3.cpp  pose_graph_g2o_lie_algebra.cpp
ICL_NUIM/: VaFRIC_data_reader.tgz
ICL_NUIM/VaFRIC_data_reader/: CMakeLists.txt
ICL_NUIM/VaFRIC_data_reader/src/: test_vaFRIC.cpp
LiDARVO/: CMakeLists.txt  main.cpp
LiDARVO/data/keypoint/: 10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  2.txt  20.txt  21.txt  22.txt  23.txt  24.txt  25.txt  26.txt  27.txt  28.txt  29.txt  3.txt  30.txt  31.txt  32.txt  33.txt  34.txt  35.txt  36.txt  37.txt  38.txt  39.txt  4.txt  40.txt  41.txt  42.txt  43.txt  44.txt  45.txt  46.txt  (+51 more)
LiDARVO/data/lidar/: 10.txt  100.txt  101.txt  102.txt  103.txt  104.txt  105.txt  106.txt  107.txt  108.txt  109.txt  11.txt  110.txt  111.txt  112.txt  113.txt  114.txt  115.txt  116.txt  117.txt  118.txt  119.txt  12.txt  120.txt  121.txt  122.txt  123.txt  124.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  2.txt  20.txt  21.txt  22.txt  23.txt  (+83 more)
LiDARVO/data/pointcloud/: 10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  2.txt  20.txt  21.txt  22.txt  23.txt  24.txt  25.txt  26.txt  27.txt  28.txt  29.txt  3.txt  30.txt  31.txt  32.txt  33.txt  34.txt  35.txt  36.txt  37.txt  38.txt  39.txt  4.txt  40.txt  41.txt  42.txt  43.txt  44.txt  45.txt  46.txt  (+25 more)
LiDARVO/data/velocity/: 10.txt  100.txt  101.txt  102.txt  103.txt  104.txt  105.txt  106.txt  107.txt  108.txt  109.txt  11.txt  110.txt  111.txt  112.txt  113.txt  114.txt  115.txt  116.txt  117.txt  118.txt  119.txt  12.txt  120.txt  121.txt  122.txt  123.txt  124.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  2.txt  20.txt  21.txt  22.txt  23.txt  (+83 more)
LiDARVO/data/velocity_lidar/: 10.txt  100.txt  101.txt  102.txt  103.txt  104.txt  105.txt  106.txt  107.txt  108.txt  109.txt  11.txt  110.txt  111.txt  112.txt  113.txt  114.txt  115.txt  116.txt  117.txt  118.txt  119.txt  12.txt  120.txt  121.txt  122.txt  123.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  2.txt  20.txt  21.txt  22.txt  23.txt  24.txt  (+82 more)
LiDARViewer/: 000001KeyPt.txt  CMakeLists.txt  LSD_demo.cpp  LSD_merge.cpp  LSD_merge.h  LSD_merge_main.cpp  LiDAR_functions.cpp  LiDAR_functions.h  canny.cpp  canny.h  common_head.h  main.cpp  main2.cpp  tool_functions.cpp  tool_functions.h
LiDARVisionG2O/: CMakeLists.txt  Converter.cc  main.cpp
LiDAR_showing/: CMakeLists.txt  main.cpp
PCL_ICP/: CMakeLists.txt  main.cpp
PCLpointcloud/: CMakeLists.txt  main.cpp
RGBD_Plane_iteration/: CMakeLists.txt  main.cpp
RGBD_showing/: CMakeLists.txt  check_fix_depth.cpp  main.cpp  main_bak.cpp
Scripts/: ICL_NUIM_script.sh
beforeafterfixdepth/: CMakeLists.txt  main.cpp
g2oplayground/: CMakeLists.txt  main.cpp
g2oplayground2/: CMakeLists.txt  main.cpp
pcl_tree_search/: CMakeLists.txt
readKITTILaser/: CMakeLists.txt
readKITTILaser/src/: main.cpp
testloadtxt/: CMakeLists.txt  main.cpp
undistort_laser/: CMakeLists.txt  main.cpp
